Response finalization WIP

--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -3570,3 +3570,114 @@ japanese     =   {http://proofcafe.org/sf}
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+@Article{KidneyYW24,
+  author       = {Donnacha Ois{\'{\i}}n Kidney and Zhixuan Yang and Nicolas Wu},
+  title        = {Algebraic Effects Meet Hoare Logic in Cubical Agda},
+  journal      = {Proc. {ACM} Program. Lang.},
+  year         = 2024,
+  volume       = 8,
+  number       = {{POPL}},
+  pages        = {1663-1695},
+  doi          = {10.1145/3632898},
+  url          = {https://doi.org/10.1145/3632898},
+  timestamp    = {Mon, 05 Feb 2024 20:23:03 +0100},
+  biburl       = {https://dblp.org/rec/journals/pacmpl/KidneyYW24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Article{VezzosiMA21,
+  author       = {Andrea Vezzosi and Anders M{\"{o}}rtberg and Andreas Abel},
+  title        = {Cubical Agda: {A} dependently typed programming language with
+                  univalence and higher inductive types},
+  journal      = {J. Funct. Program.},
+  year         = 2021,
+  volume       = 31,
+  pages        = {e8},
+  doi          = {10.1017/S0956796821000034},
+  url          = {https://doi.org/10.1017/S0956796821000034},
+  timestamp    = {Sun, 16 May 2021 00:13:31 +0200},
+  biburl       = {https://dblp.org/rec/journals/jfp/VezzosiMA21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Book{DBLP:books/daglib/0046165,
+  author       = {The Univalent Foundations Program},
+  title        = {Homotopy Type Theory: Univalent Foundations of Mathematics},
+  year         = 2013,
+  publisher    = {Institute for Advanced Study},
+  url          = {https://homotopytypetheory.org/book/},
+  timestamp    = {Fri, 06 Dec 2019 15:25:34 +0100},
+  biburl       = {https://dblp.org/rec/books/daglib/0046165.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Article{DBLP:journals/mscs/AngiuliBCHHL21,
+  author       = {Carlo Angiuli and Guillaume Brunerie and Thierry Coquand and
+                  Robert Harper and Kuen{-}Bang Hou (Favonia) and Daniel
+                  R. Licata},
+  title        = {Syntax and models of Cartesian cubical type theory},
+  journal      = {Math. Struct. Comput. Sci.},
+  year         = 2021,
+  volume       = 31,
+  number       = 4,
+  pages        = {424-468},
+  doi          = {10.1017/S0960129521000347},
+  url          = {https://doi.org/10.1017/S0960129521000347},
+  timestamp    = {Wed, 23 Feb 2022 11:16:44 +0100},
+  biburl       = {https://dblp.org/rec/journals/mscs/AngiuliBCHHL21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Article{DBLP:journals/flap/CohenCHM17,
+  author       = {Cyril Cohen and Thierry Coquand and Simon Huber and Anders
+                  M{\"{o}}rtberg},
+  title        = {Cubical Type Theory: {A} Constructive Interpretation of the
+                  Univalence Axiom},
+  journal      = {{FLAP}},
+  year         = 2017,
+  volume       = 4,
+  number       = 10,
+  pages        = {3127-3170},
+  url          = {http://collegepublications.co.uk/ifcolog/?00019},
+  timestamp    = {Fri, 29 Jan 2021 13:41:28 +0100},
+  biburl       = {https://dblp.org/rec/journals/flap/CohenCHM17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@InProceedings{LindleyMMSWY24,
+  author       = {Sam Lindley and Cristina Matache and Sean K. Moss and Sam
+                  Staton and Nicolas Wu and Zhixuan Yang},
+  title        = {Scoped Effects as Parameterized Algebraic Theories},
+  year         = 2024,
+  booktitle    = {Programming Languages and Systems - 33rd European Symposium on
+                  Programming, {ESOP} 2024, Held as Part of the European Joint
+                  Conferences on Theory and Practice of Software, {ETAPS} 2024,
+                  Luxembourg City, Luxembourg, April 6-11, 2024, Proceedings,
+                  Part {I}},
+  pages        = {3-21},
+  doi          = {10.1007/978-3-031-57262-3\_1},
+  url          = {https://doi.org/10.1007/978-3-031-57262-3\_1},
+  crossref     = {DBLP:conf/esop/2024-1},
+  timestamp    = {Sat, 08 Jun 2024 13:13:57 +0200},
+  biburl       = {https://dblp.org/rec/conf/esop/LindleyMMSWY24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@proceedings{DBLP:conf/esop/2024-1,
+  editor       = {Stephanie Weirich},
+  title        = {Programming Languages and Systems - 33rd European Symposium on Programming,
+                  {ESOP} 2024, Held as Part of the European Joint Conferences on Theory
+                  and Practice of Software, {ETAPS} 2024, Luxembourg City, Luxembourg,
+                  April 6-11, 2024, Proceedings, Part {I}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14576},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-3-031-57262-3},
+  doi          = {10.1007/978-3-031-57262-3},
+  isbn         = {978-3-031-57261-6},
+  timestamp    = {Sat, 28 Dec 2024 13:10:12 +0100},
+  biburl       = {https://dblp.org/rec/conf/esop/2024-1.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
