--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -3573,7 +3573,7 @@ japanese     =   {http://proofcafe.org/sf}
 
 @Article{KidneyYW24,
   author       = {Donnacha Ois{\'{\i}}n Kidney and Zhixuan Yang and Nicolas Wu},
-  title        = {Algebraic Effects Meet Hoare Logic in Cubical Agda},
+  title        = {Algebraic Effects Meet {H}oare Logic in {C}ubical {A}gda},
   journal      = {Proc. {ACM} Program. Lang.},
   year         = 2024,
   volume       = 8,
@@ -3679,5 +3679,68 @@ japanese     =   {http://proofcafe.org/sf}
   isbn         = {978-3-031-57261-6},
   timestamp    = {Sat, 28 Dec 2024 13:10:12 +0100},
   biburl       = {https://dblp.org/rec/conf/esop/2024-1.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Article{Wand79,
+  author       = {Mitchell Wand},
+  title        = {Final Algebra Semantics and Data Type Extensions},
+  journal      = {J. Comput. Syst. Sci.},
+  year         = 1979,
+  volume       = 19,
+  number       = 1,
+  pages        = {27-44},
+  doi          = {10.1016/0022-0000(79)90011-4},
+  url          = {https://doi.org/10.1016/0022-0000(79)90011-4},
+  timestamp    = {Tue, 16 Feb 2021 14:04:31 +0100},
+  biburl       = {https://dblp.org/rec/journals/jcss/Wand79.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Article{DBLP:journals/toplas/Kamin83,
+  author       = {Samuel N. Kamin},
+  title        = {Final Data Types and Their Specification},
+  journal      = {{ACM} Trans. Program. Lang. Syst.},
+  year         = 1983,
+  volume       = 5,
+  number       = 1,
+  pages        = {97-123},
+  doi          = {10.1145/357195.357202},
+  url          = {https://doi.org/10.1145/357195.357202},
+  timestamp    = {Tue, 06 Nov 2018 12:51:29 +0100},
+  biburl       = {https://dblp.org/rec/journals/toplas/Kamin83.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@InProceedings{Devriese19,
+  author       = {Dominique Devriese},
+  title        = {Modular effects in Haskell through effect polymorphism and
+                  explicit dictionary applications: a new approach and the
+                  {\(\mu\)}VeriFast verifier as a case study},
+  year         = 2019,
+  booktitle    = {Proceedings of the 12th {ACM} {SIGPLAN} International
+                  Symposium on Haskell, Haskell@ICFP 2019, Berlin, Germany,
+                  August 18-23, 2019},
+  pages        = {1-14},
+  doi          = {10.1145/3331545.3342589},
+  url          = {https://doi.org/10.1145/3331545.3342589},
+  crossref     = {DBLP:conf/haskell/2019},
+  timestamp    = {Mon, 12 Jul 2021 15:34:15 +0200},
+  biburl       = {https://dblp.org/rec/conf/haskell/Devriese19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Article{DBLP:journals/tcs/Wadler90,
+  author       = {Philip Wadler},
+  title        = {Deforestation: Transforming Programs to Eliminate Trees},
+  journal      = {Theor. Comput. Sci.},
+  year         = 1990,
+  volume       = 73,
+  number       = 2,
+  pages        = {231-248},
+  doi          = {10.1016/0304-3975(90)90147-A},
+  url          = {https://doi.org/10.1016/0304-3975(90)90147-A},
+  timestamp    = {Wed, 17 Feb 2021 21:57:56 +0100},
+  biburl       = {https://dblp.org/rec/journals/tcs/Wadler90.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
